# advent-of-code

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  readme.md
.github/workflows/: rust.yml
2015/: project.clj
2015/src/: day01.clj  day02.clj  day03.clj  day04.clj  day05.clj
2019/src/: day01.clj  day02.clj
2020/: Cargo.toml  temp.txt
2020/src/: day20.rs  lib.rs
2021/inputs/: 14_test.txt
2021/src/: day1.rs  day10.rs  day13.rs  day14.rs  day15.rs  day2.rs  day9.rs  lib.rs
2022/: Cargo.toml
2022/input/: day_2.txt
2022/src/: day_01.rs  day_03.rs  day_04.rs  day_06.rs  day_07.rs  day_09.rs  day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_2.rs  day_20.rs  day_21.rs  day_22.rs  day_3.rs  day_4.rs  day_5.rs  day_8.rs  lib.rs
2023/: .gitignore  README.md  bb.edn  deps.edn
2023/src/: core.clj  day01.clj  day02.clj  day03.clj  day04.clj  day05.clj  day06.clj  day07.clj  day08.clj  day09.clj  day10.clj  day11.clj  day12.clj  day13.clj  day14.clj  day15.clj  day16.clj  day17.clj  day18.clj  day19.clj  day21.clj  day23.clj
2024/: .gitignore  README.md  bb.edn  project.clj
2024/input/: 10.txt  6.txt
2024/src/: core.clj  day01.clj  day02.clj  day03.clj  day04.clj  day05.clj  day06.clj  day07.clj  day08.clj  day09.clj  day10.clj  day11.clj  day12.clj  day13.clj  day14.clj  day15.clj  day16.clj  day17.clj  day18.clj  day19.clj  day20.clj  day21.clj  (+5 more)
2025/: .gitignore
advent_of_code_macro/: Cargo.toml
src/: day1.rs  day10.rs  day11.rs  day14.rs  day15.rs  day9.rs  lib.rs
(+11 files in other folders)
