[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

[profile.test]
opt-level = 2

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent_of_code_macro = { path = "../advent_of_code_macro" }
json = "0.12.4"
paste = "1.0.9"
